--- a/public/plan.html
+++ b/public/plan.html
@@ -220,6 +220,33 @@
       .tab-content.active {
         display: block;
       }
+
+      /* ▼▼▼ [추가] 내신 플랜 섹션 스타일 ▼▼▼ */
+      .accordion-header {
+        cursor: pointer;
+        padding: 12px 16px;
+        color: var(--muted);
+        font-size: 14px;
+        background: #f8fafc;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .accordion-header:hover {
+        background: #f1f5f9;
+      }
+      .accordion-content {
+        display: none;
+        padding: 16px;
+        border-top: 1px solid var(--border);
+      }
+      .accordion-header .arrow {
+        transition: transform 0.2s;
+      }
+      .accordion-header.active .arrow {
+        transform: rotate(180deg);
+      }
+      /* ▲▲▲ [추가] 내신 플랜 섹션 스타일 ▲▲▲ */
     </style>
   </head>
   <body>
@@ -364,6 +391,93 @@
         </div>
       </section>
 
+      <section class="card">
+        <div class="accordion-header" id="examPlanHeader">
+          <span>📚 내신 기간 설정 (학교/학년별)</span>
+          <span class="arrow">▼</span>
+        </div>
+        <div class="accordion-content" id="examPlanContent">
+          <label>대상 선택</label>
+          <div class="row" style="align-items: stretch">
+            <select id="examSchoolSelector" style="flex: 2"></select>
+            <select id="examGradeSelector" style="flex: 1"></select>
+          </div>
+
+          <div id="examPlanActions" style="display: none; margin-top: 16px">
+            <div id="existingExamPlans" class="mb"></div>
+            <button id="btnAddNewExamPlan" class="btn" style="width: 100%">
+              새 내신 플랜 만들기
+            </button>
+          </div>
+
+          <div
+            id="examPlanEditor"
+            style="
+              display: none;
+              margin-top: 16px;
+              border-top: 1px solid #f1f5f9;
+              padding-top: 16px;
+            "
+          >
+            <div class="grid2">
+              <div>
+                <label>시작일</label><input type="date" id="examStartDate" />
+              </div>
+              <div>
+                <label>종료일</label><input type="date" id="examEndDate" />
+              </div>
+            </div>
+            <div class="mt">
+              <label>요일 선택</label>
+              <div id="examDaySelector" class="day-selector">
+                <button data-day="MON">월</button
+                ><button data-day="TUE">화</button
+                ><button data-day="WED">수</button
+                ><button data-day="THU">목</button
+                ><button data-day="FRI">금</button
+                ><button data-day="SAT">토</button
+                ><button data-day="SUN">일</button>
+              </div>
+            </div>
+            <div class="mt">
+              <hr style="border-color: #f1f5f9; margin: 16px 0" />
+              <label>교재 추가</label>
+              <div id="examMaterialSelector">
+                <div class="row">
+                  <select id="examSelMaterialCategory" style="flex: 1"></select>
+                  <select
+                    id="examSelMaterialSubCategory"
+                    style="flex: 1"
+                  ></select>
+                </div>
+                <div class="row mt">
+                  <select id="examSelMaterial" style="flex: 2"></select>
+                  <select id="examSelLane" style="flex: 1">
+                    <option value="main1">메인 1</option>
+                    <option value="main2">메인 2</option>
+                    <option value="vocab">어휘</option>
+                  </select>
+                  <button class="btn" id="btnAddExamBook" style="flex: 1">
+                    레인에 추가
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div id="examLaneMain1" class="mt"></div>
+            <div id="examLaneMain2" class="mt"></div>
+            <div id="examLaneVocab" class="mt"></div>
+            <div class="row mt" style="margin-top: 20px">
+              <button
+                class="btn no-print"
+                id="btnSaveExamPlan"
+                style="background: #10b981"
+              >
+                내신 플랜 저장
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
       <div class="main-layout">
         <div class="config-panel">
           <section class="card">
