내신기간 요일 선택 제거

--- a/public/plan.html
+++ b/public/plan.html
@@ -221,7 +221,7 @@
         display: block;
       }
 
-      /* ▼▼▼ [추가] 내신 플랜 섹션 스타일 ▼▼▼ */
+      /* 내신 플랜 섹션 스타일 */
       .accordion-header {
         cursor: pointer;
         padding: 12px 16px;
@@ -246,7 +246,6 @@
       .accordion-header.active .arrow {
         transform: rotate(180deg);
       }
-      /* ▲▲▲ [추가] 내신 플랜 섹션 스타일 ▲▲▲ */
     </style>
   </head>
   <body>
@@ -425,18 +424,6 @@
               </div>
               <div>
                 <label>종료일</label><input type="date" id="examEndDate" />
-              </div>
-            </div>
-            <div class="mt">
-              <label>요일 선택</label>
-              <div id="examDaySelector" class="day-selector">
-                <button data-day="MON">월</button
-                ><button data-day="TUE">화</button
-                ><button data-day="WED">수</button
-                ><button data-day="THU">목</button
-                ><button data-day="FRI">금</button
-                ><button data-day="SAT">토</button
-                ><button data-day="SUN">일</button>
               </div>
             </div>
             <div class="mt">
