내신기간 미리보기

--- a/public/plan.html
+++ b/public/plan.html
@@ -454,6 +454,7 @@
             <div id="examLaneMain2" class="mt"></div>
             <div id="examLaneVocab" class="mt"></div>
             <div class="row mt" style="margin-top: 20px">
+              <button class="btn" id="btnPreviewExamPlan">미리보기</button>
               <button
                 class="btn no-print"
                 id="btnSaveExamPlan"
