내신기간 미리보기2

--- a/public/plan.html
+++ b/public/plan.html
@@ -107,7 +107,6 @@
       .table .sub-header th {
         background: #f8fafc;
       }
-      /* [추가] 모달 스타일 */
       .modal-overlay {
         display: none;
         position: fixed;
@@ -151,7 +150,6 @@
         border-radius: 8px;
         margin-top: 6px;
       }
-      /* [추가] 새로운 레이아웃 스타일 */
       .main-layout {
         display: grid;
         grid-template-columns: 420px 1fr;
@@ -193,7 +191,6 @@
         color: #fff;
         border-color: var(--brand2);
       }
-      /* 탭 스타일 */
       .tabs {
         display: flex;
         gap: 4px;
@@ -220,8 +217,6 @@
       .tab-content.active {
         display: block;
       }
-
-      /* 내신 플랜 섹션 스타일 */
       .accordion-header {
         cursor: pointer;
         padding: 12px 16px;
@@ -245,6 +240,10 @@
       }
       .accordion-header.active .arrow {
         transform: rotate(180deg);
+      }
+      .row > button {
+        width: auto;
+        flex: 1;
       }
     </style>
   </head>
@@ -454,11 +453,10 @@
             <div id="examLaneMain2" class="mt"></div>
             <div id="examLaneVocab" class="mt"></div>
             <div class="row mt" style="margin-top: 20px">
-              <button class="btn" id="btnPreviewExamPlan">미리보기</button>
               <button
                 class="btn no-print"
                 id="btnSaveExamPlan"
-                style="background: #10b981"
+                style="background: #10b981; width: 100%"
               >
                 내신 플랜 저장
               </button>
