--- a/public/plan.html
+++ b/public/plan.html
@@ -245,6 +245,23 @@
         width: auto;
         flex: 1;
       }
+      /* --- [추가] 내신 플랜 레이아웃 스타일 --- */
+      .exam-plan-layout {
+        display: grid;
+        grid-template-columns: 420px 1fr;
+        gap: 24px;
+        align-items: start;
+      }
+      .exam-config-panel {
+        position: sticky;
+        top: 24px;
+        max-height: calc(100vh - 48px);
+        overflow-y: auto;
+      }
+      .exam-preview-panel .card-b {
+        padding: 16px;
+      }
+      /* --- [끝] 내신 플랜 레이아웃 스타일 --- */
     </style>
   </head>
   <body>
@@ -395,71 +412,98 @@
           <span class="arrow">▼</span>
         </div>
         <div class="accordion-content" id="examPlanContent">
-          <label>대상 선택</label>
-          <div class="row" style="align-items: stretch">
-            <select id="examSchoolSelector" style="flex: 2"></select>
-            <select id="examGradeSelector" style="flex: 1"></select>
-          </div>
+          <div class="exam-plan-layout">
+            <div class="exam-config-panel">
+              <div class="card">
+                <div class="card-h">대상 선택</div>
+                <div class="card-b">
+                  <div class="row" style="align-items: stretch">
+                    <select id="examSchoolSelector" style="flex: 2"></select>
+                    <select id="examGradeSelector" style="flex: 1"></select>
+                  </div>
 
-          <div id="examPlanActions" style="display: none; margin-top: 16px">
-            <div id="existingExamPlans" class="mb"></div>
-            <button id="btnAddNewExamPlan" class="btn" style="width: 100%">
-              새 내신 플랜 만들기
-            </button>
-          </div>
-
-          <div
-            id="examPlanEditor"
-            style="
-              display: none;
-              margin-top: 16px;
-              border-top: 1px solid #f1f5f9;
-              padding-top: 16px;
-            "
-          >
-            <div class="grid2">
-              <div>
-                <label>시작일</label><input type="date" id="examStartDate" />
-              </div>
-              <div>
-                <label>종료일</label><input type="date" id="examEndDate" />
-              </div>
-            </div>
-            <div class="mt">
-              <hr style="border-color: #f1f5f9; margin: 16px 0" />
-              <label>교재 추가</label>
-              <div id="examMaterialSelector">
-                <div class="row">
-                  <select id="examSelMaterialCategory" style="flex: 1"></select>
-                  <select
-                    id="examSelMaterialSubCategory"
-                    style="flex: 1"
-                  ></select>
-                </div>
-                <div class="row mt">
-                  <select id="examSelMaterial" style="flex: 2"></select>
-                  <select id="examSelLane" style="flex: 1">
-                    <option value="main1">메인 1</option>
-                    <option value="main2">메인 2</option>
-                    <option value="vocab">어휘</option>
-                  </select>
-                  <button class="btn" id="btnAddExamBook" style="flex: 1">
-                    레인에 추가
-                  </button>
+                  <div
+                    id="examPlanActions"
+                    style="display: none; margin-top: 16px"
+                  >
+                    <div id="existingExamPlans" class="mb"></div>
+                    <button
+                      id="btnAddNewExamPlan"
+                      class="btn"
+                      style="width: 100%"
+                    >
+                      새 내신 플랜 만들기
+                    </button>
+                  </div>
                 </div>
               </div>
+              <div id="examPlanEditor" style="display: none">
+                <div class="card">
+                  <div class="card-b">
+                    <div class="grid2">
+                      <div>
+                        <label>시작일</label
+                        ><input type="date" id="examStartDate" />
+                      </div>
+                      <div>
+                        <label>종료일</label
+                        ><input type="date" id="examEndDate" />
+                      </div>
+                    </div>
+                    <div class="mt">
+                      <hr style="border-color: #f1f5f9; margin: 16px 0" />
+                      <label>교재 추가</label>
+                      <div id="examMaterialSelector">
+                        <div class="row">
+                          <select
+                            id="examSelMaterialCategory"
+                            style="flex: 1"
+                          ></select>
+                          <select
+                            id="examSelMaterialSubCategory"
+                            style="flex: 1"
+                          ></select>
+                        </div>
+                        <div class="row mt">
+                          <select id="examSelMaterial" style="flex: 2"></select>
+                          <select id="examSelLane" style="flex: 1">
+                            <option value="main1">메인 1</option>
+                            <option value="main2">메인 2</option>
+                            <option value="vocab">어휘</option>
+                          </select>
+                          <button
+                            class="btn"
+                            id="btnAddExamBook"
+                            style="flex: 1"
+                          >
+                            레인에 추가
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <div id="examLaneMain1" class="mt"></div>
+                    <div id="examLaneMain2" class="mt"></div>
+                    <div id="examLaneVocab" class="mt"></div>
+                    <div class="row mt" style="margin-top: 20px">
+                      <button
+                        class="btn no-print"
+                        id="btnSaveExamPlan"
+                        style="background: #10b981; width: 100%"
+                      >
+                        내신 플랜 저장
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div id="examLaneMain1" class="mt"></div>
-            <div id="examLaneMain2" class="mt"></div>
-            <div id="examLaneVocab" class="mt"></div>
-            <div class="row mt" style="margin-top: 20px">
-              <button
-                class="btn no-print"
-                id="btnSaveExamPlan"
-                style="background: #10b981; width: 100%"
-              >
-                내신 플랜 저장
-              </button>
+            <div class="exam-preview-panel">
+              <section class="card">
+                <div class="card-h">내신 플랜 미리보기</div>
+                <div class="card-b" id="examResult">
+                  대상을 선택하고 플랜을 설정해주세요.
+                </div>
+              </section>
             </div>
           </div>
         </div>
