내신기간 미리보기에 요일 추가

--- a/public/plan.html
+++ b/public/plan.html
@@ -500,6 +500,22 @@
             <div class="exam-preview-panel">
               <section class="card">
                 <div class="card-h">내신 플랜 미리보기</div>
+
+                <div
+                  class="card-b no-print"
+                  style="border-bottom: 1px solid var(--border)"
+                >
+                  <label>미리보기 요일 선택</label>
+                  <div id="examPreviewDaySelector" class="day-selector">
+                    <button data-day="MON">월</button>
+                    <button data-day="TUE">화</button>
+                    <button data-day="WED">수</button>
+                    <button data-day="THU">목</button>
+                    <button data-day="FRI">금</button>
+                    <button data-day="SAT">토</button>
+                    <button data-day="SUN">일</button>
+                  </div>
+                </div>
                 <div class="card-b" id="examResult">
                   대상을 선택하고 플랜을 설정해주세요.
                 </div>
