--- a/public/plan.html
+++ b/public/plan.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>레슨플랜 생성</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="./css/style.css" rel="stylesheet" />
+    <link href="./css/style.css?v=1.1" rel="stylesheet" />
     <style>
       /* --- 기존 스타일 유지 --- */
       /* 인쇄용 */
