--- a/public/plan.html
+++ b/public/plan.html
@@ -4,23 +4,9 @@
     <meta charset="utf-8" />
     <title>레슨플랜 생성</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="./css/style.css?v=1.1" rel="stylesheet" />
+    <link href="./css/style.css?v=1.2" rel="stylesheet" />
     <style>
       /* --- 기존 스타일 유지 --- */
-      /* 인쇄용 */
-      @media print {
-        .nav,
-        .no-print {
-          display: none !important;
-        }
-        body {
-          background: #fff;
-        }
-        .card {
-          box-shadow: none;
-          border: 0;
-        }
-      }
       .book-card {
         border: 1px solid var(--border);
         border-radius: 12px;
@@ -262,6 +248,120 @@
         padding: 16px;
       }
       /* --- [끝] 내신 플랜 레이아웃 스타일 --- */
+
+      /* --- [추가] 인쇄 전용 스타일 --- */
+      @media print {
+        @page {
+          size: A4;
+          margin: 1cm;
+        }
+        body {
+          -webkit-print-color-adjust: exact;
+          print-color-adjust: exact;
+        }
+        body > .nav,
+        .config-panel,
+        .event-section,
+        .no-print,
+        .print-hide,
+        #insertionControls,
+        .card-h,
+        #examPlanHeader {
+          display: none !important;
+        }
+        html,
+        body {
+          font-size: 10px;
+          background: #fff;
+          padding: 0;
+          margin: 0;
+        }
+        .main-layout {
+          display: block !important;
+          padding: 0;
+          margin: 0;
+        }
+        .preview-panel,
+        .card,
+        .card-b {
+          border: none;
+          box-shadow: none;
+          margin: 0;
+          padding: 0;
+        }
+        .student-header {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          font-size: 13px;
+          font-weight: bold;
+          margin-bottom: 8px;
+          padding: 8px;
+          border: 2px solid #334155;
+          border-radius: 8px;
+          background-color: #f1f5f9;
+        }
+        .student-header .info {
+          font-size: 10px;
+          font-weight: normal;
+          color: #475569;
+          text-align: right;
+        }
+        .materials-header {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 2px;
+          margin-bottom: 8px;
+          padding-bottom: 8px;
+          border-bottom: 1px solid #ccc;
+        }
+        .material-item {
+          background: #f1f5f9;
+          border-radius: 5px;
+          padding: 2px 3px;
+          flex: 1 1 24%;
+          border: 1px solid #e2e8f0;
+        }
+        .material-title {
+          font-weight: bold;
+          font-size: 8px;
+          color: #000;
+        }
+        .material-lecture {
+          font-size: 6px;
+          color: #000;
+          font-weight: bold;
+        }
+        .table {
+          width: 100%;
+          border-collapse: collapse;
+          table-layout: fixed;
+        }
+        .table th {
+          padding: 2px;
+          font-size: 6px;
+          border: 1px solid #ccc;
+          font-weight: bold;
+          vertical-align: middle;
+        }
+        .table tbody td {
+          padding: 2px 3px;
+          font-size: 7.5px;
+          border: 1px solid #ccc;
+          word-break: break-all;
+          text-align: center;
+          vertical-align: middle;
+        }
+        .table .date-column {
+          width: 65px;
+        }
+        .lecture-text {
+          font-weight: bold;
+        }
+        .page-break-after {
+          page-break-after: always;
+        }
+      }
     </style>
   </head>
   <body>
