--- a/public/plan.html
+++ b/public/plan.html
@@ -20,7 +20,7 @@
       }
       .small {
         font-size: 12px;
-        color: var(--muted);
+        color: var(--text-secondary);
       }
       .month-nav {
         display: flex;
@@ -71,7 +71,7 @@
       }
       .material-lecture {
         font-size: 14px;
-        color: var(--muted);
+        color: var(--text-secondary);
         margin-top: 4px;
       }
       .table th,
@@ -119,7 +119,7 @@
       }
       .modal-body p {
         font-size: 14px;
-        color: var(--muted);
+        color: var(--text-secondary);
         margin-bottom: 16px;
       }
       .modal-actions button {
@@ -169,8 +169,8 @@
         flex: 1;
         padding: 10px 0;
         border: 1px solid var(--border);
-        background: #f8fafc;
-        color: var(--muted);
+        background: var(--card);
+        color: var(--text-secondary);
         cursor: pointer;
       }
       .day-selector button.active {
@@ -191,7 +191,7 @@
         cursor: pointer;
         border-bottom: 2px solid transparent;
         font-size: 14px;
-        color: var(--muted);
+        color: var(--text-secondary);
       }
       .tab-button.active {
         color: var(--brand);
@@ -207,7 +207,7 @@
       .accordion-header {
         cursor: pointer;
         padding: 12px 16px;
-        color: var(--muted);
+        color: var(--text-secondary);
         font-size: 14px;
         background: #f8fafc;
         display: flex;
@@ -590,7 +590,7 @@
                       <button
                         class="btn no-print"
                         id="btnSaveExamPlan"
-                        style="background: #10b981; width: 100%"
+                        style="width: 100%"
                       >
                         내신 플랜 저장
                       </button>
@@ -724,12 +724,11 @@
                 <div class="row mt" style="margin-top: 20px">
                   <button
                     class="btn no-print"
-                    id="btnSave"
-                    style="background: #10b981"
+                    id="btnSave" class="btn btn-success"
                   >
                     저장하기
                   </button>
-                  <button class="btn no-print" id="btnPrint">PDF로 저장</button>
+                  <button class="btn no-print btn-secondary" id="btnPrint">PDF로 저장</button>
                 </div>
               </div>
             </div>
@@ -761,17 +760,13 @@
         <input id="skipReason" placeholder="기타 사유 (선택 사항)" />
 
         <div class="modal-actions" style="margin-top: 20px; text-align: right">
-          <button id="btnSkipDelete" class="btn" style="background: #ef4444">
+          <button id="btnSkipDelete" class="btn btn-danger">
             삭제
           </button>
-          <button id="btnSkipSave" class="btn" style="margin-left: 8px">
+          <button id="btnSkipSave" class="btn btn-success" style="margin-left: 8px">
             저장
           </button>
-          <button
-            id="btnSkipClose"
-            class="btn"
-            style="background: #94a3b8; margin-left: 8px"
-          >
+          <button id="btnSkipClose" class="btn btn-secondary" style="margin-left: 8px">
             닫기
           </button>
         </div>
