메인 대신 교재

--- a/public/plan.html
+++ b/public/plan.html
@@ -577,8 +577,8 @@
                         <div class="row mt">
                           <select id="examSelMaterial" style="flex: 2"></select>
                           <select id="examSelLane" style="flex: 1">
-                            <option value="main1">메인 1</option>
-                            <option value="main2">메인 2</option>
+                            <option value="main1">수업 1</option>
+                            <option value="main2">수업 2</option>
                             <option value="vocab">어휘</option>
                           </select>
                           <button
@@ -700,8 +700,8 @@
                     <div class="row mt">
                       <select id="selMaterial" style="flex: 2"></select>
                       <select id="selLane" style="flex: 1">
-                        <option value="main1">메인 1</option>
-                        <option value="main2">메인 2</option>
+                        <option value="main1">수업 1</option>
+                        <option value="main2">수업 2</option>
                         <option value="vocab">어휘</option>
                       </select>
                       <button class="btn" id="btnAddBook" style="flex: 1">
